[package]
name = "qr-greeter"
version.workspace = true
authors.workspace = true
description = "GNOME Shell extension that adds a QR code to authentication prompts when a MS DAG URL is detected."
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

# NOTE: This package supports both GNOME 45+ (modern) and GNOME 40-44 (legacy).
# The build.rs script automatically detects the installed GNOME Shell version
# and prepares the appropriate extension format in target/qr-greeter-build/.

[lib]
path = "src/lib.rs"

[package.metadata.deb]
name = "himmelblau-qr-greeter"
depends = ["gnome-shell", "himmelblau"]
recommends = ["systemd-container"]
assets = [
  ["target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/extension.js", "usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/extension.js", "644"],
  ["target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/qrcodegen.js", "usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/qrcodegen.js", "644"],
  ["target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/qr-selection.js", "usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/qr-selection.js", "644"],
  ["target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/metadata.json", "usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/metadata.json", "644"],
  ["target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/stylesheet.css", "usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/stylesheet.css", "644"],
  ["target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/msdag.png", "usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/msdag.png", "644"],
  ["target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/ms-consumer-dag.png", "usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/ms-consumer-dag.png", "644"],
]
maintainer-scripts = "scripts"

[package.metadata.generate-rpm]
name = "himmelblau-qr-greeter"
assets = [
  { source = "target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/extension.js", dest = "/usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/extension.js", mode = "644" },
  { source = "target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/qrcodegen.js", dest = "/usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/qrcodegen.js", mode = "644" },
  { source = "target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/qr-selection.js", dest = "/usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/qr-selection.js", mode = "644" },
  { source = "target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/metadata.json", dest = "/usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/metadata.json", mode = "644" },
  { source = "target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/stylesheet.css", dest = "/usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/stylesheet.css", mode = "644" },
  { source = "target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/msdag.png", dest = "/usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/msdag.png", mode = "644" },
  { source = "target/release/qr-greeter-build/qr-greeter@himmelblau-idm.org/ms-consumer-dag.png", dest = "/usr/share/gnome-shell/extensions/qr-greeter@himmelblau-idm.org/ms-consumer-dag.png", mode = "644" },
]
post_install_script = "scripts/postinst"

[package.metadata.generate-rpm.requires]
gnome-shell = "*"
himmelblau = "*"

[package.metadata.generate-rpm.recommends]
systemd-container = "*"
