[package]
name = "selinux"
description = "Himmelblau SELinux config"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.generate-rpm]
name = "himmelblau-selinux"
assets = [
  { source = "target/release/himmelblaud.pp", dest = "/usr/share/selinux/packages/himmelblaud.pp", mode = "0644" },
  { source = "src/himmelblaud.te", dest = "/usr/share/doc/himmelblau-selinux/selinux/himmelblaud.te", mode = "0644" },
  { source = "src/himmelblaud.fc", dest = "/usr/share/doc/himmelblau-selinux/selinux/himmelblaud.fc", mode = "0644" }
]
post_trans_script = "scripts/postinst"
post_uninstall_script = "scripts/postrm"

[package.metadata.generate-rpm.requires]
policycoreutils = "*"

[package.metadata.deb]
name = "himmelblau-selinux"
depends = "selinux-policy-default, policycoreutils, selinux-utils"
assets = [
  ["target/release/himmelblaud.pp", "usr/share/selinux/packages/", "0644"],
  ["src/himmelblaud.te", "usr/share/doc/himmelblau-selinux/selinux/", "0644"],
  ["src/himmelblaud.fc", "usr/share/doc/himmelblau-selinux/selinux/", "0644"]
]
maintainer-scripts = "scripts"
