[package]
name = "selinux"
description = "Himmelblau SELinux config"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.generate-rpm]
name = "himmelblau-selinux"
assets = [
  { source = "src/selinux/src/himmelblaud.te", dest = "/usr/share/selinux/packages/himmelblaud/himmelblaud.te", mode = "0644" },
  { source = "src/selinux/src/himmelblaud.fc", dest = "/usr/share/selinux/packages/himmelblaud/himmelblaud.fc", mode = "0644" },
  { source = "src/selinux/src/himmelblaud.if", dest = "/usr/share/selinux/packages/himmelblaud/himmelblaud.if", mode = "0644" }
]
post_trans_script = "scripts/postinst"
post_uninstall_script = "scripts/postrm"

[package.metadata.generate-rpm.requires]
policycoreutils = "*"
selinux-policy-devel = "*"
make = "*"

[package.metadata.deb]
name = "himmelblau-selinux"
depends = "selinux-policy-default, selinux-policy-dev, policycoreutils, selinux-utils, make"
assets = [
  ["src/selinux/src/himmelblaud.te", "usr/share/selinux/packages/himmelblaud/", "0644"],
  ["src/selinux/src/himmelblaud.fc", "usr/share/selinux/packages/himmelblaud/", "0644"],
  ["src/selinux/src/himmelblaud.if", "usr/share/selinux/packages/himmelblaud/", "0644"]
]
maintainer-scripts = "scripts"
