[package]
name = "sshd-config"
description = "Himmelblau Required SSHD Configuration"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[package.metadata.deb]
name = "himmelblau-sshd-config"
depends = ["openssh-server"]
assets = [
  ["../../platform/debian/sshd_config", "etc/ssh/sshd_config.d/himmelblau.conf", "644"],
]

[package.metadata.generate-rpm]
name = "himmelblau-sshd-config"
assets = [
  { source = "../../platform/debian/sshd_config", dest = "/etc/ssh/sshd_config.d/himmelblau.conf", mode = "644" },
]

[package.metadata.generate-rpm.requires]
sshd = "*"
